# aspirante

./: CMakeLists.txt  package.xml
launch/: aspirante_gmapping.launch  aspirante_test.launch  aspirante_test2.launch
map/: aspirante_test1.pgm  aspirante_test1.yaml  aspirante_test2.pgm  aspirante_test2.yaml
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
rviz/: rviz_config.rviz
scripts/: coverage_path_planning_test.py
src/: rviz_path_visualizer.cpp
urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
worlds/: aspirante_test1.world  aspirante_test2.world
