<?xml version="1.0"?>
<package format="2">
  <name>aspirante</name>
  <version>0.0.0</version>
  <description>aspirante package</description>
  
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>


  <license>TODO</license>
  
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>

  <export>
  </export>
</package>
